# $Id$

2006-05-22	Konstantin V. Arkhipov

	* core/Logic/LogicalChain.class.php: evil regression fixed.

	* core/Form/PlainForm.class.php: a bit of backward's compatibility
	added.

	* main/Flow/PartViewer.class.php, main/Flow/PhpViewResolver.class.php:
	ability to check existence added.

	* main/DAOs/FileSystemDaoWorker.class.php: file system incarnation of
	VoodooDaoWorker, quite simple, but transparent and lockless too.

2006-05-20	Konstantin V. Arkhipov

	* 0.4.4 released.

2006-05-18	Anton E. Lebedevich

	* main/Utils/RussianTextUtils.class.php: selectCaseForNumber added
	to replace getSuffix.

2006-05-15	Konstantin V. Arkhipov

	* core/Form/ListedPrimitive.class.php: list and enumeration's
	primitives grouped a bit.

	* core/Base/Enumeration.class.php: quite hacky method added, which
	can help to instantiate arbitrary Enumeration.

2006-05-11	Konstantin V. Arkhipov

	* main/Flow/RedirectToView.class.php: helper to avoid constant
	string's abuse.

2006-05-08	Anton E. Lebedevich

	* main/Utils/Mail.class.php: encoding interface simplified.

	* main/Flow/SimplePhpView.class.php: toString function added.
	
	* core/Form/Form.class.php: getTextualErrorFor function added.

2006-05-05	Sergey S. Sergeev

	* main/Containers/StorableContainer.class.php: bugfixed call to undefined
	function WrongStateException().

2006-05-04	Anton E. Lebedevich

	* main/Utils/Mail.class.php: added.

2006-05-03	Konstantin V. Arkhipov

	* meta/builders/ProtoClassBuilder.class.php: PrimitiveEnumeration
	support in proto classes.

2006-05-02	Konstantin V. Arkhipov

	* trunk/core/Base/IdentifiableObject.class.php: removed create()
	method, since it's conflicting with Enumeration's one.

2006-05-02	Sergey S. Sergeev

	* core/Form/Primitive.class.php: deleted deprecated methods.

	* core/Base/IdentifiableObject.class.php: added create() forgotten
	method.

	* core/Form/Filter.class.php: added replaceSymbols(), removeSymbols()
	filters.

2006-04-30	Konstantin V. Arkhipov

	* 0.4.3 released.
