@@ -1,5 +1,10 @@
 # $Id$
 
+2006-05-24	Konstantin V. Arkhipov
+
+	* meta/builders/DaoBuilder.class.php: handling of final	classes
+	implemented.
+
 2006-05-22	Konstantin V. Arkhipov
 
 	* core/Logic/LogicalChain.class.php: evil regression fixed.
